--- a/src/app/css/navbar.css
+++ b/src/app/css/navbar.css
@@ -1,5 +1,5 @@
 .nav-bar-container {
-    background-image: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, 0));
+    background-image: linear-gradient(rgb(92, 90, 90), rgba(92, 90, 90));
     width: 100vw;
     position: fixed;
     z-index: 1000000;
@@ -73,7 +73,7 @@
 }
 
 .nav-link:hover, .nav-link-dark:hover {
-    color: rgb(187, 255, 244);
+    color: rgb(255, 255, 255);
     transform: scale(1.1);
 }
 
