--- a/src/app/css/navbar.css
+++ b/src/app/css/navbar.css
@@ -1,58 +1,79 @@
 .nav-bar-container {
-    background-image: linear-gradient(rgb(92, 90, 90), rgba(92, 90, 90));
+    background-color: #282a36;
     width: 100vw;
-    position: fixed;
+    position: fixed; /* Make sure the navbar is fixed at the top */
     z-index: 1000000;
     justify-content: center;
+    color: white !important;
     display: flex;
-}
+    padding: 10px 0; /* Make the navbar height smaller */
+    box-shadow: 0px 0px 5px #fff;
+} 
 
+/* Left-side (DAMS Research Group) styling */
 .nav-left {
     display: flex;
     align-items: center;
-}
-
-.nav-right {
-    display: flex;
-    align-items: center;
-}
-
-.nav-desktop {
-    width: 89vw;
-    height: 13.3vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* padding: 0 4vw; */
-    top: 0;
-    padding-right: 4vw;
+    flex-grow: 1; /* Push the content to the left */
 }
 
 .nav-logo {
-    width: 105px;
-    height: auto;
+    font-size: 1.5vw; /* Make the text larger for DAMS Research Group */
+    font-weight: bold;
     margin-right: 1.4vw;
     cursor: pointer;
     transition: 0.3s;
+    color: white !important;
+}
+
+.nav-logo, .nav-link, .nav-link-dark {
+    color: #fff; /* Explicitly set navbar text color to white */
 }
 
 .nav-logo:hover {
     transform: scale(1.15);
-    /* box-shadow:0 0 50px #4fc3f7; */
-
     -webkit-filter: drop-shadow(0px 0px 8px rgb(255, 255, 255));
     filter: drop-shadow(0px 0px 8px rgb(255, 255, 255));
 }
 
-.nav-link, .nav-link-dark {
-    font-size: 1.1vw;
+/* Right-side (Home, Data) styling */
+.nav-right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-grow: 1; /* Push the content to the right */
+}
+
+.nav-link {
+    font-size: 0.9vw; /* Keep Home and Data links the same size */
     transition: 0.3s;
     margin: 0 1vw;
     text-transform: uppercase;
     cursor: pointer;
     font-weight: bolder;
     text-align: center;
+    color: white !important;
 }
+
+.nav-desktop {
+    width: 89vw;
+    height: 8vh; /* Reduced height of the navbar */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+}   
+
+.nav-link, .nav-link-dark {
+    font-size: 0.9vw; /* Make the links a little smaller */
+    transition: 0.3s;
+    margin: 0 1vw;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: bolder;
+    text-align: center;
+    color: white;
+}           
 
 .nav-link::before, .nav-link-dark::before {
     content: " { ";
@@ -80,13 +101,6 @@
 .nav-link:hover::before, .nav-link:hover::after,
 .nav-link-dark:hover::before, .nav-link-dark:hover::after {
     opacity: 1;
-}
-
-.mlh-trust-badge {
-    position: fixed;
-    top: -10px;
-    right: 3%;
-    height: 160px;
 }
 
 /* hamburger menu */
@@ -118,7 +132,7 @@
 .hamburger-icon span {
     width: 100%;
     height: 2px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 253, 253);
     transition: all 0.3 ease-in-out;
 }
 
@@ -165,18 +179,13 @@
 }
 
 .light-mode-text {
-    color: #fff;
+    transition: color 0.3s; /* Smooth color transition */
 }
 
-@media (prefers-color-scheme: light) {
-    .light-mode-text {
-        color: #fff; 
-    }
-}
-
+/* Styles for dark mode */
 @media (prefers-color-scheme: dark) {
     .light-mode-text {
-        color: inherit;
+        color: #fff; /* White text in dark mode */
     }
 }
 
@@ -195,6 +204,20 @@
     }
 
     .nav-logo {
+        font-size: 1.5rem;
+        justify-content: center;
+        text-align: center;
+        top: 10px;
+        color: #fff;
+    }
+
+    .nav-bar-container {
+        background-color: transparent;
+        box-shadow: 0px 0px 0px;
+        color: white;
+    }
+
+    .nav-logo {
         padding-right: 0px;
     }
 
@@ -203,7 +226,6 @@
     }
     .hamburger-menu {
         right: 10px; /*more spacing adjustments*/
-        margin-bottom: 100px;
         margin-right: 15px;
         /*spacing fixed on hamburger menu*/
     }
