--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,20 +17,9 @@ html {
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    width: 100%;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  background: #23252f;
   overflow-x: hidden;
 }
 
@@ -38,16 +27,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
-
-.before-content::before {
-  content: "{";
-  color: #ffffff;
-  margin-right: 14px;
-}
-
-.before-content::after {
-  content: "}";
-  color: #ffffff;
-  margin-left: 14px;
 }
